@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.72 2022/03/10 03:40:30 osa Exp $
+# $NetBSD: Makefile,v 1.73 2022/03/10 18:40:44 osa Exp $
 
 DISTNAME=	nginx-1.21.6
 
 MAINTAINER=	osa@NetBSD.org
 
-PKGREVISION=	2 
+PKGREVISION=	3 
 .include "../../www/nginx/Makefile.common"
 .include "../../mk/bsd.pkg.mk"
