@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.107 2022/03/10 03:40:30 osa Exp $
+# $NetBSD: Makefile,v 1.108 2022/03/10 18:40:44 osa Exp $
 
 DISTNAME=	nginx-1.20.2
 
 MAINTAINER=	osa@NetBSD.org
 
-PKGREVISION=	3
+PKGREVISION=	4
 .include "../../www/nginx/Makefile.common"
 .include "../../mk/bsd.pkg.mk"
