@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.12 2022/03/10 03:40:30 osa Exp $
+@comment $NetBSD: PLIST,v 1.13 2022/03/10 18:40:44 osa Exp $
 ${PLIST.dso}${PLIST.arrayvar}libexec/nginx/ngx_http_array_var_module.so
 ${PLIST.dso}${PLIST.cprg}libexec/nginx/ngx_http_cache_purge_module.so
 ${PLIST.dso}${PLIST.dav}libexec/nginx/ngx_http_dav_ext_module.so
@@ -22,6 +22,7 @@ ${PLIST.dso}${PLIST.setmisc}libexec/nginx/ngx_http_set_misc_module.so
 ${PLIST.dso}${PLIST.stream}libexec/nginx/ngx_stream_module.so
 ${PLIST.perl}${PERL5_SUB_INSTALLVENDORARCH}/auto/nginx/nginx.${SOEXT}
 ${PLIST.perl}${PERL5_SUB_INSTALLVENDORARCH}/nginx.pm
+${PLIST.njs}bin/njs
 man/man8/nginx.8
 sbin/nginx
 share/examples/nginx/conf/fastcgi.conf
