@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.1375 2022/03/10 16:29:46 nia Exp $
+$NetBSD: CHANGES-2022,v 1.1376 2022/03/10 18:40:44 osa Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -1738,3 +1738,5 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated multimedia/mediainfo to 21.09 [ryoon 2022-03-10]
 	Updated www/firefox91 to 91.7.0 [nia 2022-03-10]
 	Updated www/firefox91-l10n to 91.7.0 [nia 2022-03-10]
+	Updated www/nginx to 1.20.2nb4 [osa 2022-03-10]
+	Updated www/nginx-devel to 1.21.6nb3 [osa 2022-03-10]
